Added in more bios and placeholders

--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -41,7 +41,18 @@
     </nav>
 
 		<div id="bio-section">
-			<div class="col-lg-4">
+      			
+      <div class="col-lg-4">
+				  <img class="img-circle" src="images/Nestor.jpg" width="140" height="140">
+				  <h2>Nestor Castro</h2>
+				  <p>Nestor is a third year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.<p>
+				  <p><strong>Responsibilities: </strong>front-end</p>
+				  <p><strong>Number of commits: </strong></p>
+				  <p><strong>Number of issues: </strong></p>
+				  <p><strong>Number of unit tests: </strong></p>
+      </div>
+      
+      <div class="col-lg-4">
 				  <img class="img-circle" src="images/nicholas.jpg" width="140" height="140">
 				  <h2>Nicholas Cobb</h2>
 				  <p>I am a third year Computer Science major at the university of Texas at Austin. I have interned at Google two times and am about to again this summer. In my free time, I enjoy writing music and participating in political clubs on campus.</p>
@@ -50,6 +61,47 @@
 				  <p><strong>Number of issues: </strong></p>
 				  <p><strong>Number of unit tests: </strong></p>
 			</div>
+
+      <div class="col-lg-4">
+				  <img class="img-circle" src="images/Norman.jpg" width="140" height="140">
+				  <h2>Joel Davis</h2>
+				  <p>Joel is a third year Computer Science major at the University of Texas at Austin.</p>
+				  <p><strong>Responsibilities: </strong>back-end</p>
+				  <p><strong>Number of commits: </strong></p>
+				  <p><strong>Number of issues: </strong></p>
+				  <p><strong>Number of unit tests: </strong></p>
+      </div>
+
+      <div class="col-lg-4">
+				  <img class="img-circle" src="images/Norman.jpg" width="140" height="140">
+				  <h2>Nilo Lisboa</h2>
+				  <p>Nilo is a third year Computer Science major at the University of Texas at Austin. </p>
+				  <p><strong>Responsibilities: </strong>back-end</p>
+				  <p><strong>Number of commits: </strong></p>
+				  <p><strong>Number of issues: </strong></p>
+				  <p><strong>Number of unit tests: </strong></p>
+      </div>
+
+      <div class="col-lg-4">
+				  <img class="img-circle" src="images/Matthew.jpg" width="140" height="140">
+				  <h2>Matthew Martinez</h2>
+				  <p>Matthew is a third year Computer Science major at the University of Texas at Austin. He is the vice-president of Lambda Omega Alpha, an independent Catholic Service Fraternity on campus. In his very little free time he enjoys watching Netflix and spending quality time with friends.</p>
+				  <p><strong>Responsibilities: </strong>front-end</p>
+				  <p><strong>Number of commits: </strong></p>
+				  <p><strong>Number of issues: </strong></p>
+				  <p><strong>Number of unit tests: </strong></p>
+      </div>
+
+      <div class="col-lg-4">
+				  <img class="img-circle" src="images/Norman.jpg" width="140" height="140">
+				  <h2>Jose Ramirez</h2>
+				  <p>Jose is a third year Computer Science major at the University of Texas at Austin. </p>
+				  <p><strong>Responsibilities: </strong></p>
+				  <p><strong>Number of commits: </strong></p>
+				  <p><strong>Number of issues: </strong></p>
+				  <p><strong>Number of unit tests: </strong></p>
+			</div>
+
 		</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
