--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -1,112 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Homepage - MagicDB</title>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<title>About - MagicDB</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/about.css">
-  </head>
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="css/about.css">
+	</head>
 
 
 	<body>
 		<nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">MagicDB</a>
-        </div>
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="index.html">MagicDB</a>
+				</div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="cards.html">Cards</a></li>
-            <li><a href="sets.html">Sets</a></li>
-            <li><a href="artists.html">Artists</a></li>
-            <li class="active"><a href="#">About</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="cards.html">Cards</a></li>
+						<li><a href="sets.html">Sets</a></li>
+						<li><a href="artists.html">Artists</a></li>
+						<li class="active"><a href="#">About</a></li>
+					</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
 
 		<div id="bio-section">
-      			
-      <div class="col-lg-4">
-				  <img class="img-circle" src="images/Nestor.jpg" width="140" height="140">
-				  <h2>Nestor Castro</h2>
-				  <p>Nestor is a third year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.<p>
-				  <p><strong>Responsibilities: </strong>front-end</p>
-				  <p><strong>Number of commits: </strong></p>
-				  <p><strong>Number of issues: </strong></p>
-				  <p><strong>Number of unit tests: </strong></p>
-      </div>
-      
-      <div class="col-lg-4">
-				  <img class="img-circle" src="images/nicholas.jpg" width="140" height="140">
-				  <h2>Nicholas Cobb</h2>
-				  <p>I am a third year Computer Science major at the university of Texas at Austin. I have interned at Google two times and am about to again this summer. In my free time, I enjoy writing music and participating in political clubs on campus.</p>
-				  <p><strong>Responsibilities: </strong>front-end</p>
-				  <p><strong>Number of commits: </strong></p>
-				  <p><strong>Number of issues: </strong></p>
-				  <p><strong>Number of unit tests: </strong></p>
+			<div class="col-lg-4">
+					<img class="img-circle" src="images/Nestor.jpg" width="140" height="140">
+					<h2>Nestor Castro</h2>
+					<p>Nestor is a third year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.<p>
+					<p><strong>Responsibilities: </strong>front-end</p>
+					<p><strong>Number of commits: </strong></p>
+					<p><strong>Number of issues: </strong></p>
+					<p><strong>Number of unit tests: </strong></p>
+			</div>
+			
+			<div class="col-lg-4">
+					<img class="img-circle" src="images/nicholas.jpg" width="140" height="140">
+					<h2>Nicholas Cobb</h2>
+					<p>Nicholas is a third year Computer Science major at the University of Texas at Austin. Nicholas has interned at Google two times and is about to again this summer. In his free time, he enjoys writing music and participating in political clubs on campus.</p>
+					<p><strong>Responsibilities: </strong>front-end</p>
+					<p><strong>Number of commits: </strong></p>
+					<p><strong>Number of issues: </strong></p>
+					<p><strong>Number of unit tests: </strong></p>
 			</div>
 
-      <div class="col-lg-4">
-				  <img class="img-circle" src="images/Norman.jpg" width="140" height="140">
-				  <h2>Joel Davis</h2>
-				  <p>Joel is a third year Computer Science major at the University of Texas at Austin.</p>
-				  <p><strong>Responsibilities: </strong>back-end</p>
-				  <p><strong>Number of commits: </strong></p>
-				  <p><strong>Number of issues: </strong></p>
-				  <p><strong>Number of unit tests: </strong></p>
-      </div>
+			<div class="col-lg-4">
+					<img class="img-circle" src="images/Norman.jpg" width="140" height="140">
+					<h2>Joel Davis</h2>
+					<p>Joel is a third year Computer Science major at the University of Texas at Austin.</p>
+					<p><strong>Responsibilities: </strong>back-end</p>
+					<p><strong>Number of commits: </strong></p>
+					<p><strong>Number of issues: </strong></p>
+					<p><strong>Number of unit tests: </strong></p>
+			</div>
 
-      <div class="col-lg-4">
-				  <img class="img-circle" src="images/Norman.jpg" width="140" height="140">
-				  <h2>Nilo Lisboa</h2>
-				  <p>Nilo is a third year Computer Science major at the University of Texas at Austin. </p>
-				  <p><strong>Responsibilities: </strong>back-end</p>
-				  <p><strong>Number of commits: </strong></p>
-				  <p><strong>Number of issues: </strong></p>
-				  <p><strong>Number of unit tests: </strong></p>
-      </div>
+			<div class="col-lg-4">
+					<img class="img-circle" src="images/Norman.jpg" width="140" height="140">
+					<h2>Nilo Lisboa</h2>
+					<p>Nilo is a third year Computer Science major at the University of Texas at Austin. </p>
+					<p><strong>Responsibilities: </strong>back-end</p>
+					<p><strong>Number of commits: </strong></p>
+					<p><strong>Number of issues: </strong></p>
+					<p><strong>Number of unit tests: </strong></p>
+			</div>
 
-      <div class="col-lg-4">
-				  <img class="img-circle" src="images/Matthew.jpg" width="140" height="140">
-				  <h2>Matthew Martinez</h2>
-				  <p>Matthew is a third year Computer Science major at the University of Texas at Austin. He is the vice-president of Lambda Omega Alpha, an independent Catholic Service Fraternity on campus. In his very little free time he enjoys watching Netflix and spending quality time with friends.</p>
-				  <p><strong>Responsibilities: </strong>front-end</p>
-				  <p><strong>Number of commits: </strong></p>
-				  <p><strong>Number of issues: </strong></p>
-				  <p><strong>Number of unit tests: </strong></p>
-      </div>
+			<div class="col-lg-4">
+					<img class="img-circle" src="images/Matthew.jpg" width="140" height="140">
+					<h2>Matthew Martinez</h2>
+					<p>Matthew is a third year Computer Science major at the University of Texas at Austin. He is the vice-president of Lambda Omega Alpha, an independent Catholic Service Fraternity on campus. In his very little free time he enjoys watching Netflix and spending quality time with friends.</p>
+					<p><strong>Responsibilities: </strong>front-end</p>
+					<p><strong>Number of commits: </strong></p>
+					<p><strong>Number of issues: </strong></p>
+					<p><strong>Number of unit tests: </strong></p>
+			</div>
 
-      <div class="col-lg-4">
-				  <img class="img-circle" src="images/Norman.jpg" width="140" height="140">
-				  <h2>Jose Ramirez</h2>
-				  <p>Jose is a third year Computer Science major at the University of Texas at Austin. </p>
-				  <p><strong>Responsibilities: </strong></p>
-				  <p><strong>Number of commits: </strong></p>
-				  <p><strong>Number of issues: </strong></p>
-				  <p><strong>Number of unit tests: </strong></p>
+			<div class="col-lg-4">
+					<img class="img-circle" src="images/Norman.jpg" width="140" height="140">
+					<h2>Jose Ramirez</h2>
+					<p>Jose is a third year Computer Science major at the University of Texas at Austin. </p>
+					<p><strong>Responsibilities: </strong></p>
+					<p><strong>Number of commits: </strong></p>
+					<p><strong>Number of issues: </strong></p>
+					<p><strong>Number of unit tests: </strong></p>
 			</div>
 
 		</div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<body>
 </html>
