--- a/tutorial-project-161522/www/artists.html
+++ b/tutorial-project-161522/www/artists.html
@@ -1,1 +1,88 @@
-artists
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<title>Artists - MagicDB</title>
+
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="css/models.css">
+	</head>
+
+
+	<body>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="index.html">MagicDB</a>
+				</div>
+
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="cards.html">Cards</a></li>
+						<li><a href="sets.html">Sets</a></li>
+						<li class="active"><a href="#">Artists</a></li>
+						<li><a href="about.html">About</a></li>
+					</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
+		<div class="magicdb-header">
+			<h1>Artists</h1>
+			<h3>Some description about the artists...</h3>
+		</div>
+
+		
+		<table class="table table-hover  table-responsive">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Number of Cards</th>
+					<th>Number of Sets</th>
+					<th>Cards</th>
+					<th>Sets</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>fillername1</td>
+					<td>fillernumofcard1</td>
+					<td>fillernumofset1</td>
+					<td>fillercard1</td>
+					<td>fillerset1</td>
+				</tr>
+				<tr>
+					<td>fillername2</td>
+					<td>fillernumofcard2</td>
+					<td>fillernumofset2</td>
+					<td>fillercard2</td>
+					<td>fillerset2</td>
+				</tr>
+				<tr>
+					<td>fillername3</td>
+					<td>fillernumofcard3</td>
+					<td>fillernumofset3</td>
+					<td>fillercard3</td>
+					<td>fillerset3</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<body>
+</html>
