--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -34,6 +34,7 @@
 						<li><a href="cards.html">Cards</a></li>
 						<li><a href="sets.html">Sets</a></li>
 						<li><a href="artists.html">Artists</a></li>
+						<li><a href="subtypes.html">Subtypes</a></li>
 						<li class="active"><a href="#">About</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
@@ -72,9 +73,9 @@
 			</div>
 
 			<div class="col-lg-4">
-					<img class="img-circle" src="images/Norman.jpg" width="140" height="140">
+					<img class="img-circle" src="images/nilo.jpg" width="140" height="140">
 					<h2>Nilo Lisboa</h2>
-					<p>Nilo is a third year Computer Science major at the University of Texas at Austin. </p>
+					<p>Nilo is a 4th-year Computer Science Major at UT Austin. He has interned twice at IBM both part-time and full-time. He really enjoys story-driven video games as well as engaging board games for multiple people.</p>
 					<p><strong>Responsibilities: </strong>back-end</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
