--- a/tutorial-project-161522/www/artists.html
+++ b/tutorial-project-161522/www/artists.html
@@ -34,6 +34,7 @@
 						<li><a href="cards.html">Cards</a></li>
 						<li><a href="sets.html">Sets</a></li>
 						<li class="active"><a href="#">Artists</a></li>
+						<li><a href="subtypes.html">Subtypes</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
@@ -44,41 +45,42 @@
 			<h3>Some description about the artists...</h3>
 		</div>
 
-		
-		<table class="table table-hover  table-responsive">
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Number of Cards</th>
-					<th>Number of Sets</th>
-					<th>Cards</th>
-					<th>Sets</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>fillername1</td>
-					<td>fillernumofcard1</td>
-					<td>fillernumofset1</td>
-					<td>fillercard1</td>
-					<td>fillerset1</td>
-				</tr>
-				<tr>
-					<td>fillername2</td>
-					<td>fillernumofcard2</td>
-					<td>fillernumofset2</td>
-					<td>fillercard2</td>
-					<td>fillerset2</td>
-				</tr>
-				<tr>
-					<td>fillername3</td>
-					<td>fillernumofcard3</td>
-					<td>fillernumofset3</td>
-					<td>fillercard3</td>
-					<td>fillerset3</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="table-responsive">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>Name</th>
+						<th>Number of Cards</th>
+						<th>Number of Sets</th>
+						<th>Cards</th>
+						<th>Sets</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>fillername1</td>
+						<td>fillernumofcard1</td>
+						<td>fillernumofset1</td>
+						<td>fillercard1</td>
+						<td>fillerset1</td>
+					</tr>
+					<tr>
+						<td>fillername2</td>
+						<td>fillernumofcard2</td>
+						<td>fillernumofset2</td>
+						<td>fillercard2</td>
+						<td>fillerset2</td>
+					</tr>
+					<tr>
+						<td>fillername3</td>
+						<td>fillernumofcard3</td>
+						<td>fillernumofset3</td>
+						<td>fillercard3</td>
+						<td>fillerset3</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
