--- a/tutorial-project-161522/www/cards.html
+++ b/tutorial-project-161522/www/cards.html
@@ -1,1 +1,114 @@
-cards
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<title>Cards - MagicDB</title>
+
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="css/models.css">
+	</head>
+
+
+	<body>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="index.html">MagicDB</a>
+				</div>
+
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="index.html">Home</a></li>
+						<li class="active"><a href="#">Cards</a></li>
+						<li><a href="sets.html">Sets</a></li>
+						<li><a href="artists.html">Artists</a></li>
+						<li><a href="subtypes.html">Subtypes</a></li>
+						<li><a href="about.html">About</a></li>
+					</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
+		<div class="magicdb-header">
+			<h1>Cards</h1>
+			<h3>Some description about the cards...</h3>
+		</div>
+
+		<div class="table-responsive">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>Name</th>
+						<th>Type</th>
+						<th>Subtype</th>
+						<th>Text</th>
+						<th>Set</th>
+						<th>Mana Cost</th>
+						<th>Color(s)</th>
+						<th>Power and Toughness</th>
+						<th>Art<span style="display:none;">(image)</span></th>
+						<th>Rarity</th>
+						<th>Artist</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>fillerName1</td>
+						<td>fillerType1</td>
+						<td>fillerSubtype1</td>
+						<td>fillerText1</td>
+						<td>fillerSet1</td>
+						<td>fillerManaCost1</td>
+						<td>fillerColor1</td>
+						<td>fillerPowerandToughness1</td>
+						<td>fillerArt1</td>
+						<td>fillerRarity1</td>
+						<td>fillerArtist1</td>
+					</tr>
+					<tr>
+						<td>fillerName2</td>
+						<td>fillerType2</td>
+						<td>fillerSubtype2</td>
+						<td>fillerText2</td>
+						<td>fillerSet2</td>
+						<td>fillerManaCost2</td>
+						<td>fillerColor2</td>
+						<td>fillerPowerandToughness2</td>
+						<td>fillerArt2</td>
+						<td>fillerRarity2</td>
+						<td>fillerArtist2</td>
+					</tr>
+					<tr>
+						<td>fillerName3</td>
+						<td>fillerType3</td>
+						<td>fillerSubtype3</td>
+						<td>fillerText3</td>
+						<td>fillerSet3</td>
+						<td>fillerManaCost3</td>
+						<td>fillerColor3</td>
+						<td>fillerPowerandToughness3</td>
+						<td>fillerArt3</td>
+						<td>fillerRarity3</td>
+						<td>fillerArtist3</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<body>
+</html>
