--- a/tutorial-project-161522/www/subtypes.html
+++ b/tutorial-project-161522/www/subtypes.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Sets - MagicDB</title>
+		<title>Subtypes - MagicDB</title>
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -32,17 +32,17 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="cards.html">Cards</a></li>
-						<li class="active"><a href="#">Sets</a></li>
+						<li><a href="sets.html">Sets</a></li>
 						<li><a href="artists.html">Artists</a></li>
-						<li><a href="subtypes.html">Subtypes</a></li>
+						<li class="active"><a href="#">Subtypes</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
 		<div class="magicdb-header">
-			<h1>Sets</h1>
-			<h3>Some description about the sets...</h3>
+			<h1>Subtypes</h1>
+			<h3>Some description about the subtypes...</h3>
 		</div>
 
 		<div class="table-responsive">
@@ -50,41 +50,37 @@
 				<thead>
 					<tr>
 						<th>Name</th>
-						<th>Release Date</th>
 						<th>Number of Cards</th>
-						<th>Block</th>
 						<th>Cards</th>
-						<th>Promo Art</th>
+						<th>Example Card</th>
 						<th>Artists</th>
+						<th>Sets</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
 						<td>fillerName1</td>
-						<td>fillerReleaseDate1</td>
 						<td>fillerNumberofCards1</td>
-						<td>fillerBlock1</td>
 						<td>fillerCards1</td>
-						<td>fillerPromoArt1</td>
+						<td>fillerExampleCard1</td>
 						<td>fillerArtists1</td>
+						<td>fillerSets1</td>
 					</tr>
 					<tr>
 						<td>fillerName2</td>
-						<td>fillerReleaseDate2</td>
 						<td>fillerNumberofCards2</td>
-						<td>fillerBlock2</td>
 						<td>fillerCards2</td>
-						<td>fillerPromoArt2</td>
+						<td>fillerExampleCard2</td>
 						<td>fillerArtists2</td>
+						<td>fillerSets2</td>
 					</tr>
 					<tr>
 						<td>fillerName3</td>
-						<td>fillerReleaseDate3</td>
 						<td>fillerNumberofCards3</td>
-						<td>fillerBlock3</td>
 						<td>fillerCards3</td>
-						<td>fillerPromoArt3</td>
+						<td>fillerExampleCard3</td>
 						<td>fillerArtists3</td>
+						<td>fillerSets3</td>
 					</tr>
 				</tbody>
 			</table>
