--- a/tutorial-project-161522/www/index.html
+++ b/tutorial-project-161522/www/index.html
@@ -34,6 +34,7 @@
             <li><a href="cards.html">Cards</a></li>
             <li><a href="sets.html">Sets</a></li>
             <li><a href="artists.html">Artists</a></li>
+            <li><a href="subtypes.html">Subtypes</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
