--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -63,9 +63,9 @@
 			</div>
 
 			<div class="col-lg-4">
-					<img class="img-circle" src="images/Norman.jpg" width="140" height="140">
+					<img class="img-circle" src="images/joel.jpg" width="140" height="140">
 					<h2>Joel Davis</h2>
-					<p>Joel is a third year Computer Science major at the University of Texas at Austin.</p>
+					<p>Joel is a fourth year Computer Science major at the University of Texas at Austin. Enjoys game development and software engineering. In his free time he likes video games, guitar, and skateboarding.</p>
 					<p><strong>Responsibilities: </strong>back-end</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
@@ -73,9 +73,9 @@
 			</div>
 
 			<div class="col-lg-4">
-					<img class="img-circle" src="images/nilo.jpg" width="140" height="140">
+					<img class="img-circle" src="images/nilo.png" width="140" height="140">
 					<h2>Nilo Lisboa</h2>
-					<p>Nilo is a 4th-year Computer Science Major at UT Austin. He has interned twice at IBM both part-time and full-time. He really enjoys story-driven video games as well as engaging board games for multiple people.</p>
+					<p>Nilo is a 4th-year Computer Science Major at UT Austin. He has interned twice at IBM both part-time and full-time. He really enjoys story-driven video games as well as archery and kendo.</p>
 					<p><strong>Responsibilities: </strong>back-end</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
@@ -93,7 +93,7 @@
 			</div>
 
 			<div class="col-lg-4">
-					<img class="img-circle" src="images/Norman.jpg" width="140" height="140">
+					<img class="img-circle" src="images/jose.png" width="140" height="140">
 					<h2>Jose Ramirez</h2>
 					<p>Jose is a third year Computer Science major at the University of Texas at Austin. </p>
 					<p><strong>Responsibilities: </strong></p>
