more details on the about page

--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -41,7 +41,12 @@
 			</div><!-- /.container-fluid -->
 		</nav>
 
-		<div id="bio-section">
+		<div id="description" class="about-section">
+			<h1><strong>Meet <em>SWEet Gathering</em>!</strong></h1>
+			<h4>Our website, MagicDB, is a database for the wildly popular card game Magic the Gathering! Fans of this card game can search for and get details about the various cards in the game.</h4>
+		</div>
+
+		<div id="bio-section" class="about-section">
 			<div class="col-lg-4">
 					<img class="img-circle" src="images/Nestor.jpg" width="140" height="140">
 					<h2>Nestor Castro</h2>
@@ -101,7 +106,39 @@
 					<p><strong>Number of issues: </strong></p>
 					<p><strong>Number of unit tests: </strong></p>
 			</div>
+		</div>
 
+		<div class="divider"></div>
+
+		<div id="stats" class="about-section">
+			<h1><strong>Stats</strong></h1>
+			<p><strong>Number of commits: </strong></p>
+			<p><strong>Number of issues: </strong></p>
+			<p><strong>Number of unit tests: </strong></p>
+			<p><strong><a href="http://docs.apimagicthegatheringio.apiary.io">Link to Apiary API</strong></p>
+			<p><strong><a href="https://github.com/jtd2226/magicdbswe/issues">Link to Github Issue Tracker</a></strong></p>
+			<p><strong><a href="https://github.com/jtd2226/magicdbswe">Link to Github Repo</a></strong></p>
+		</div>
+
+		<div class="divider"></div>
+
+		<div id="data-sec" class="about-section">
+			<h1><strong>Data</strong></h1>
+			<h4>links to data sources and how each was used.</h4>
+		</div>
+
+		<div class="divider"></div>
+
+		<div id="data-sec" class="about-section">
+			<h1><strong>Tools</strong></h1>
+			<h4>Tools and how each was used.</h4>
+		</div>
+
+		<div class="divider"></div>
+
+		<div id="report" class="about-section">
+			<h1><strong>Technical Report</strong></h1>
+			report
 		</div>
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
