Addded logo and subtitle to main page

--- a/tutorial-project-161522/www/index.html
+++ b/tutorial-project-161522/www/index.html
@@ -42,8 +42,10 @@
     </nav>
 
     <div id="main" class="title">
-      <h1>MagicDB</h1>
+      <img src="images/MainLogo.png" width="600" style="display: block; margin: auto;">
     </div> <!-- end of title -->
+
+    <h1 class="index-descr">Magic the Gathering Database</h1>
 
     <div class="col-md-12">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
