Changed Logo to percentage

--- a/tutorial-project-161522/www/index.html
+++ b/tutorial-project-161522/www/index.html
@@ -42,7 +42,7 @@
     </nav>
 
     <div id="main" class="title">
-      <img src="images/MainLogo.png" width="600" style="display: block; margin: auto;">
+      <img src="images/MainLogo.png" style="display: block; margin: auto; width: 50%">
     </div> <!-- end of title -->
 
     <h1 class="index-descr">Magic the Gathering Database</h1>
