small changes to about

--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -98,10 +98,10 @@
 			</div>
 
 			<div class="col-lg-4">
-					<img class="img-circle" src="images/jose.png" width="140" height="140">
+					<img class="img-circle" src="images/jose.jpg" width="140" height="140">
 					<h2>Jose Ramirez</h2>
-					<p>Jose is a 3rd-year Computer Science major at the University of Texas at Austin. </p>
-					<p><strong>Responsibilities: </strong></p>
+					<p>Jose is a 4th-year Computer Science major at the University of Texas at Austin. He enjoys game development and participates in ACM activities. In his free time, he plays video games and watches gaming streams on Twitch. </p>
+					<p><strong>Responsibilities: </strong>back-end</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
 					<p><strong>Number of unit tests: </strong></p>
