more about page stuff

--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -51,7 +51,7 @@
 					<img class="img-circle" src="images/Nestor.jpg" width="140" height="140">
 					<h2>Nestor Castro</h2>
 					<p>Nestor is a 3rd-year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.<p>
-					<p><strong>Responsibilities: </strong>front-end</p>
+					<p><strong>Responsibilities: </strong>front-end, hosting</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
 					<p><strong>Number of unit tests: </strong></p>
@@ -61,7 +61,7 @@
 					<img class="img-circle" src="images/nicholas.jpg" width="140" height="140">
 					<h2>Nicholas Cobb</h2>
 					<p>Nicholas is a 3rd-year Computer Science major at the University of Texas at Austin. Nicholas has interned at Google two times and is about to again this summer. In his free time, he enjoys writing music and participating in political clubs on campus.</p>
-					<p><strong>Responsibilities: </strong>front-end</p>
+					<p><strong>Responsibilities: </strong>front-end, coding</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
 					<p><strong>Number of unit tests: </strong></p>
@@ -71,7 +71,7 @@
 					<img class="img-circle" src="images/joel.jpg" width="140" height="140">
 					<h2>Joel Davis</h2>
 					<p>Joel is a 4th-year Computer Science major at the University of Texas at Austin. Enjoys game development and software engineering. In his free time he likes video games, guitar, and skateboarding.</p>
-					<p><strong>Responsibilities: </strong>back-end</p>
+					<p><strong>Responsibilities: </strong>back-end, API</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
 					<p><strong>Number of unit tests: </strong></p>
@@ -81,7 +81,7 @@
 					<img class="img-circle" src="images/nilo.png" width="140" height="140">
 					<h2>Nilo Lisboa</h2>
 					<p>Nilo is a 4th-year Computer Science Major at UT Austin. He has interned twice at IBM both part-time and full-time. He really enjoys story-driven video games as well as archery and kendo.</p>
-					<p><strong>Responsibilities: </strong>back-end</p>
+					<p><strong>Responsibilities: </strong>back-end, Phase I Leader</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
 					<p><strong>Number of unit tests: </strong></p>
@@ -91,7 +91,7 @@
 					<img class="img-circle" src="images/Matthew.jpg" width="140" height="140">
 					<h2>Matthew Martinez</h2>
 					<p>Matthew is a 3rd-year Computer Science major at the University of Texas at Austin. He is the vice-president of Lambda Omega Alpha, an independent Catholic Service Fraternity on campus. In his very little free time he enjoys watching Netflix and spending quality time with friends.</p>
-					<p><strong>Responsibilities: </strong>front-end</p>
+					<p><strong>Responsibilities: </strong>front-end, design</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
 					<p><strong>Number of unit tests: </strong></p>
@@ -101,7 +101,7 @@
 					<img class="img-circle" src="images/jose.jpg" width="140" height="140">
 					<h2>Jose Ramirez</h2>
 					<p>Jose is a 4th-year Computer Science major at the University of Texas at Austin. He enjoys game development and participates in ACM activities. In his free time, he plays video games and watches gaming streams on Twitch. </p>
-					<p><strong>Responsibilities: </strong>back-end</p>
+					<p><strong>Responsibilities: </strong>back-end, testing</p>
 					<p><strong>Number of commits: </strong></p>
 					<p><strong>Number of issues: </strong></p>
 					<p><strong>Number of unit tests: </strong></p>
@@ -129,9 +129,20 @@
 
 		<div class="divider"></div>
 
-		<div id="data-sec" class="about-section">
+		<div id="tools-sec" class="about-section">
 			<h1><strong>Tools</strong></h1>
-			<h4>Tools and how each was used.</h4>
+			<h4><em>Front End</em></h4>
+			<p>Bootstrap- Bootstrap is a popular framework for the front-end aspect of web projects. It facilitates design by providing various pre-designed, responsive HTML elements such as buttons, menus, navigation bars, search bars, input boxes and more. The CSS classes included with Bootstrap work with the HTML elements to facilitate the creation of a sleek, customizable interface for a website.</p>
+			<p>jQuery- jQuery is a small and powerful JavaScript library that simplifies tasks like HTML DOM traversal, HTML DOM editing, and event handling much simpler. jQuery is used with Bootstrap to help create a smooth front-end to a web project.</p>
+			<p>Angular 2- Angular 2 is a development platform for building responsive web applications using TypeScript or JavaScript. It facilitates the use of TypeScript or JavaScript by organizing the code into manageable components.</p>
+			<br>
+			<h4><em>Back End</em></h4>
+			<p>Flask- Flask is a framework for Python based on Werkzeug and Jinja 2.</p>
+			<p>Google Cloud Platform- The Google Cloud Platform is a means of hosting our website. It provides the ability to create and edit a website in the cloud. The details of the hosting are described in the “Hosting” section below.</p>
+			<br>
+			<h4><em>Communication/Other</em></h4>
+			<p>GitHub- GitHub is used for version control for our project. Every member of our group pushed to the same public GitHub repository, to bring the entire project together, even when we were working separately or remotely. If there is ever an issue with an update to the code, rolling back to an old version is simple and quick. When one member makes a change, other members can easily see what code was removed or added, so we could pick up where someone else left off. Another helpful tool GitHub provides is the Issue Tracker. It’s an easy way to see what tasks need to be done, as well as keep track of bugs that need to be fixed.</p>
+			<p>Slack- We used Slack as our main method of communication. It has a web and mobile application that we used to coordinate meeting times, and share pictures, information, and anything else we needed to communicate quickly with the group. Slack is integrated with the GitHub repo so in between personal communication we could all see when commits or issues were created.</p>
 		</div>
 
 		<div class="divider"></div>
