haha tables aren't allowed rip :(

--- a/tutorial-project-161522/www/cards.html
+++ b/tutorial-project-161522/www/cards.html
@@ -33,8 +33,8 @@
 						<li><a href="index.html">Home</a></li>
 						<li class="active"><a href="#">Cards</a></li>
 						<li><a href="sets.html">Sets</a></li>
-						<li><a href="artists.html">Artists</a></li>
 						<li><a href="subtypes.html">Subtypes</a></li>
+						<li><a href="artists.html">Artists</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
@@ -45,66 +45,33 @@
 			<h3>Some description about the cards...</h3>
 		</div>
 
-		<div class="table-responsive">
-			<table class="table table-hover">
-				<thead>
-					<tr>
-						<th>Name</th>
-						<th>Type</th>
-						<th>Subtype</th>
-						<th>Text</th>
-						<th>Set</th>
-						<th>Mana Cost</th>
-						<th>Color(s)</th>
-						<th>Power and Toughness</th>
-						<th>Art<span style="display:none;">(image)</span></th>
-						<th>Rarity</th>
-						<th>Artist</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>fillerName1</td>
-						<td>fillerType1</td>
-						<td>fillerSubtype1</td>
-						<td>fillerText1</td>
-						<td>fillerSet1</td>
-						<td>fillerManaCost1</td>
-						<td>fillerColor1</td>
-						<td>fillerPowerandToughness1</td>
-						<td>fillerArt1</td>
-						<td>fillerRarity1</td>
-						<td>fillerArtist1</td>
-					</tr>
-					<tr>
-						<td>fillerName2</td>
-						<td>fillerType2</td>
-						<td>fillerSubtype2</td>
-						<td>fillerText2</td>
-						<td>fillerSet2</td>
-						<td>fillerManaCost2</td>
-						<td>fillerColor2</td>
-						<td>fillerPowerandToughness2</td>
-						<td>fillerArt2</td>
-						<td>fillerRarity2</td>
-						<td>fillerArtist2</td>
-					</tr>
-					<tr>
-						<td>fillerName3</td>
-						<td>fillerType3</td>
-						<td>fillerSubtype3</td>
-						<td>fillerText3</td>
-						<td>fillerSet3</td>
-						<td>fillerManaCost3</td>
-						<td>fillerColor3</td>
-						<td>fillerPowerandToughness3</td>
-						<td>fillerArt3</td>
-						<td>fillerRarity3</td>
-						<td>fillerArtist3</td>
-					</tr>
-				</tbody>
-			</table>
+		<div class="container-fluid">
+			<div class="model-inst">
+				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413585&type=card" class="img-fluid">
+				<h4>Counterspell</h4>
+			</div>
+
+			<div class="model-inst">
+				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413580&type=card" class="img-fluid">
+				<h4>Wrath of God</h4>
+			</div>
+
+			<div class="model-inst">
+				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=425915&type=card" class="img-fluid">
+				<h4>Blood Moon</h4>
+			</div>
+
+			<div class="model-inst">
+				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=382866&type=card" class="img-fluid">
+				<h4>Black Lotus</h4>
+			</div>
+
+			<div class="model-inst">
+				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=253575&type=card" class="img-fluid">
+				<h4>Worldspine Wurm</h4>
+			</div>
 		</div>
+
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
