--- a/IDB1.html
+++ b/IDB1.html
@@ -74,7 +74,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7feeea15e828; Artist&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fc3e64a27b8; Artist&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('Artists', MetaData(bind=None), Column('ar...mSets', Integer(), table=&lt;Artists&gt;), schema=None)</dl>
 
@@ -167,7 +167,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7feeea13fa58; Card&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fc3e64829b0; Card&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('Cards', MetaData(bind=None), Column('card...Key('Artists.name'), table=&lt;Cards&gt;), schema=None)</dl>
 
@@ -248,7 +248,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7feeea15e2e8; Set&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fc3e64a2278; Set&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('Sets', MetaData(bind=None), Column('code'..., String(length=256), table=&lt;Sets&gt;), schema=None)</dl>
 
@@ -317,7 +317,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7feeea15ed30; Subtype&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fc3e64a2cc0; Subtype&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('SubTypes', MetaData(bind=None), Column('n...('Cards.cardId'), table=&lt;SubTypes&gt;), schema=None)</dl>
 
