still salty that I can't use tables, but I added more stuff and instance pages.

--- a/tutorial-project-161522/www/cards.html
+++ b/tutorial-project-161522/www/cards.html
@@ -47,28 +47,18 @@
 
 		<div class="container-fluid">
 			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413585&type=card" class="img-fluid">
-				<h4>Counterspell</h4>
+				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413585&type=card">
+				<h4><a href="cards-instance.html?id=b611177dca2da89d2915f6ac4b5268a1426086cb">Counterspell</a></h4>
 			</div>
 
 			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413580&type=card" class="img-fluid">
-				<h4>Wrath of God</h4>
+				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=425915&type=card">
+				<h4><a href="cards-instance.html?id=6e978e23a63cefdfaa34aee0bb4bdadd2ddfd459">Blood Moon</a></h4>
 			</div>
 
 			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=425915&type=card" class="img-fluid">
-				<h4>Blood Moon</h4>
-			</div>
-
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=382866&type=card" class="img-fluid">
-				<h4>Black Lotus</h4>
-			</div>
-
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=253575&type=card" class="img-fluid">
-				<h4>Worldspine Wurm</h4>
+				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=382866&type=card">
+				<h4><a href="cards-instance.html?id=6ad6463d56da447ab490a1a2b2b8a18759befc5f">Black Lotus</a></h4>
 			</div>
 		</div>
 
