--- a/tutorial-project-161522/www/artists-instance.html
+++ b/tutorial-project-161522/www/artists-instance.html
@@ -5,11 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		
 		<title>Artists - MagicDB</title>
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="css/models.css">
+		<link rel="stylesheet" type="text/css" href="css/instance.css">
 	</head>
 
 
@@ -34,37 +35,51 @@
 						<li><a href="cards.html">Cards</a></li>
 						<li><a href="sets.html">Sets</a></li>
 						<li><a href="subtypes.html">Subtypes</a></li>
-						<li class="active"><a href="#">Artists</a></li>
+						<li class="active"><a href="artists.html">Artists</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
-		<div class="magicdb-header">
-			<h1>Artists</h1>
-			<h3>Some description about the artists...</h3>
+		<div id="instance-main">
 		</div>
-
-		<div class="container-fluid">
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413585&type=card" class="img-fluid">
-				<h4><a href="artists-instance.html?name=&quot;Zach Stella&quot;&id=b611177dca2da89d2915f6ac4b5268a1426086cb">Zach Stella</h4>
-			</div>
-
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=425915&type=card" class="img-fluid">
-				<h4><a href="artists-instance.html?name=&quot;Franz Vohwinkel&quot;&id=6e978e23a63cefdfaa34aee0bb4bdadd2ddfd459">Franz Vohwinkel</a></h4>
-			</div>
-
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=382866&type=card" class="img-fluid">
-				<h4><a href="artists-instance.html?name=&quot;Chris Rahn&quot;&id=6ad6463d56da447ab490a1a2b2b8a18759befc5f">Chris Rahn</a></h4>
-			</div>
-		</div>
-
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script>
+			var getUrlParams = function() {
+			    var vars = [], hash;
+			    var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+			    for(var i = 0; i < hashes.length; i++)
+			    {
+			        hash = hashes[i].split('=');
+			        vars.push(hash[0]);
+			        vars[hash[0]] = hash[1];
+			    }
+			    return vars;
+			}
+			var artistName = getUrlParams()["name"].substring(3, getUrlParams()["name"].length - 3).replace("%20", " ");
+			var cardId = getUrlParams()["id"];
+
+			
+			$("#instance-main").append("<h4><strong>Number of Cards: </strong>1</h4>");
+			$("#instance-main").append("<h4><strong>Number of Sets: </strong>1</h4>");
+			
+			var xmlHttp = new XMLHttpRequest();
+			xmlHttp.onreadystatechange = function() {
+			    if (this.readyState == 4 && this.status == 200) { //Successful GET request
+			        var card = JSON.parse(this.responseText);
+
+			        $("#instance-main").prepend("<h1>" + artistName + "</h1>");
+			        $("#instance-main").append("<h4><strong>Cards: </strong>" + card["card"]["name"] + "</h4>");
+					$("#instance-main").append("<h4><strong>Sets: </strong>" + card["card"]["setName"] + "</h4>");
+			    }
+			};
+
+			var cardId = getUrlParams()["id"];
+		    xmlHttp.open("GET", "https://api.magicthegathering.io/v1/cards/" + cardId, true); 
+		    xmlHttp.send(null);
+		</script>
 	<body>
 </html>
