--- a/tutorial-project-161522/www/sets-instance.html
+++ b/tutorial-project-161522/www/sets-instance.html
@@ -9,7 +9,7 @@
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="css/models.css">
+		<link rel="stylesheet" type="text/css" href="css/instance.css">
 	</head>
 
 
@@ -32,7 +32,7 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="cards.html">Cards</a></li>
-						<li class="active"><a href="#">Sets</a></li>
+						<li class="active"><a href="sets.html">Sets</a></li>
 						<li><a href="subtypes.html">Subtypes</a></li>
 						<li><a href="artists.html">Artists</a></li>
 						<li><a href="about.html">About</a></li>
@@ -40,31 +40,59 @@
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
-		<div class="magicdb-header">
-			<h1>Sets</h1>
-			<h3>Some description about the sets...</h3>
+		<div id="instance-main">
 		</div>
-
-		<div class="container-fluid">
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413585&type=card">
-				<h4><a href="sets-instance.html?code=&quot;EMA&quot;&cards=&quot;Counterspell&quot;&name=&quot;Zach Stella&quot;">EMA</a></h4>
-			</div>
-
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=425915&type=card">
-				<h4><a href="sets-instance.html?code=&quot;MM3&quot;&cards=&quot;Blood Moon&quot;&name=&quot;Franz Vohwinkel&quot;">MM3</a></h4>
-			</div>
-
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=382866&type=card">
-				<h4><a href="sets-instance.html?code=&quot;VMA&quot;&cards=&quot;Black Lotus&quot;&name=&quot;Chris Rahn&quot;">VMA</a></h4>
-			</div>
-		</div>
-
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script>
+			var getUrlParams = function() {
+			    var vars = [], hash;
+			    var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+			    for(var i = 0; i < hashes.length; i++)
+			    {
+			        hash = hashes[i].split('=');
+			        vars.push(hash[0]);
+			        vars[hash[0]] = hash[1];
+			    }
+			    return vars;
+			}
+
+
+			var xmlHttp = new XMLHttpRequest();
+
+			xmlHttp.onreadystatechange = function() {
+			    if (this.readyState == 4 && this.status == 200) { //Successful GET request
+			        var set = JSON.parse(this.responseText);
+
+			        // Append to the DOM
+					$("#instance-main").append("<h1>" + set["set"]["name"] + "</h1>");
+					
+					code = set["set"]["code"] || "N/A"
+					$("#instance-main").append("<h4><strong>Code: </strong>" + code + "</h4>");
+
+					rDate = set["set"]["releaseDate"] || "N/A"
+					$("#instance-main").append("<h4><strong>Release Date: </strong>" + rDate + "</h4>");
+
+					block =  set["set"]["block"] || "N/A"
+					$("#instance-main").append("<h4><strong>Block: </strong>" + block + "</h4>");
+
+					$("#instance-main").append("<h4><strong>Cards: </strong>" + getUrlParams()["cards"].substring(3, getUrlParams()["cards"].length - 3).replace("%20", " ") + "</h4>");
+
+					$("#instance-main").append("<h4><strong>Block: </strong>" + block + "</h4>");
+
+					$("#instance-main").append("<h4><strong>Subtype: </strong>N/A</h4>");
+					$("#instance-main").append("<h4><strong>Number of Cards: </strong>1</h4>");
+					$("#instance-main").append("<h4><strong>Symbol: </strong>N/A</h4>");
+
+					$("#instance-main").append("<h4><strong>Artists: </strong>" + getUrlParams()["name"].substring(3, getUrlParams()["name"].length - 3).replace("%20", " ") + "</h4>");
+			    }
+			};
+
+			var code = getUrlParams()["code"].substring(3, getUrlParams()["code"].length - 3);
+		    xmlHttp.open("GET", "https://api.magicthegathering.io/v1/sets/" + code, true); 
+		    xmlHttp.send(null);
+		</script>
 	<body>
 </html>
