added subtype carousel

--- a/tutorial-project-161522/www/index.html
+++ b/tutorial-project-161522/www/index.html
@@ -54,6 +54,7 @@
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data_target="#myCarousel" data-slide-to="3"></li>
         </ol>
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
@@ -70,6 +71,11 @@
           <div class="item">
             <div class="carousel-caption">
               <h1><a href="artists.html">Look at artists!</a></h1>
+            </div>
+          </div>
+          <div class="item">
+            <div class="carousel-caption">
+              <h1><a href="subtypes.html">Look at subtypes!</a></h1>
             </div>
           </div>
         </div>
